--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../dist/css/style.css" />
 		<title>canvas Highlighter</title>
+		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../dist/js/highlighter.js"></script>
 	</head>
 	<body>
