--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="../dist/css/style.css" />
 		<title>canvas Highlighter</title>
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="../dist/js/highlighter.js"></script>
+		<script src="../dist/js/highlighter.min.js"></script>
 	</head>
 	<body>
 		<div class="upcontainer">
