finish touchstart + touchmove left

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,11 +3,19 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../dist/css/style.css" />
 		<title>canvas Highlighter</title>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../dist/js/highlighter.min.js"></script>
 	</head>
 	<body>
 		<div class="upcontainer">
+			<div class="row">
+				<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">Start highlight</button>
+				<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">End highlight</button>
+<!--				<button class="col-xs-2 col-xs-offset-2 btn btn-primary">End highlight</button>-->
+			</div>
 			<div class="container">
 				<h1>Lorem ipsum dolor sit amet, consectetur </h1>
 				<p>
