fix some dimensions problems + adding better documenation for whole container

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="../dist/css/style.css" />
 		<title>canvas Highlighter</title>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../dist/js/highlighter.min.js"></script>
