--- a/demo/index.html
+++ b/demo/index.html
@@ -3,18 +3,36 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../dist/css/style.css" />
 		<title>canvas Highlighter</title>
-
 		<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
-
 		<script src="../bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="../dist/js/highlighter.min.js"></script>
 	</head>
 	<body>
 		<div class="upcontainer">
 			<div class="row">
-				<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">Start highlight</button>
-				<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">End highlight</button>
-				<!--<button class="col-xs-2 col-xs-offset-2 btn btn-primary">End highlight</button>-->
+				<div class="col-xs-6">
+					<div class="btn-group btn-group-justified">
+						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">
+						<span class="glyphicon glyphicon-play"></span>
+						Start highlight
+						</button>
+						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">
+						<span class="glyphicon glyphicon-stop"></span>
+						End highlight
+						</button>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="btn-group btn-group-justified">
+						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="mark">
+						<span class="glyphicon glyphicon-pencil"></span>
+						highlight Mark
+						</button>
+						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="eraser">
+						<span class="glyphicon glyphicon-erase"></span>
+						highlight eraser</button>
+					</div>
+				</div>
 			</div>
 			<div class="container">
 				<h1>Lorem ipsum dolor sit amet, consectetur </h1>
