--- a/demo/index.html
+++ b/demo/index.html
@@ -13,24 +13,37 @@
 				<div class="col-xs-6">
 					<div class="btn-group btn-group-justified">
 						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">
-						<span class="glyphicon glyphicon-play"></span>
-						Start highlight
+							<span class="glyphicon glyphicon-play"></span>
+							Start highlight
 						</button>
 						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">
-						<span class="glyphicon glyphicon-stop"></span>
-						End highlight
+							<span class="glyphicon glyphicon-stop"></span>
+							End highlight
 						</button>
 					</div>
 				</div>
 				<div class="col-xs-6">
 					<div class="btn-group btn-group-justified">
 						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="mark">
-						<span class="glyphicon glyphicon-pencil"></span>
-						highlight Mark
+							<span class="glyphicon glyphicon-pencil"></span>
+							highlight Mark
 						</button>
 						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="eraser">
-						<span class="glyphicon glyphicon-erase"></span>
-						highlight eraser</button>
+							<span class="glyphicon glyphicon-erase"></span>
+							highlight eraser
+						</button>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="btn-group btn-group-justified">
+						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="save">
+							<span class="glyphicon glyphicon-pencil"></span>
+							Save
+						</button>
+						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="load">
+							<span class="glyphicon glyphicon-erase"></span>
+							Load
+						</button>
 					</div>
 				</div>
 			</div>
