--- a/demo/index.html
+++ b/demo/index.html
@@ -47,7 +47,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container">
+			<div class="container" id="text1">
 				<h1>Lorem ipsum dolor sit amet, consectetur </h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
