--- a/demo/index.html
+++ b/demo/index.html
@@ -10,44 +10,86 @@
 	<body>
 		<div class="upcontainer">
 			<div class="row">
-				<div class="col-xs-6">
-					<div class="btn-group btn-group-justified">
-						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">
-							<span class="glyphicon glyphicon-play"></span>
-							Start highlight
-						</button>
-						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">
-							<span class="glyphicon glyphicon-stop"></span>
-							End highlight
-						</button>
+				<div class="row col-xs-6">
+					<h1 class="text-center">highlighter 1</h1>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start">
+								<span class="glyphicon glyphicon-play"></span>
+								Start
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end">
+								<span class="glyphicon glyphicon-stop"></span>
+								Stop
+							</button>
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="mark">
+								<span class="glyphicon glyphicon-pencil"></span>
+								Marker
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="eraser">
+								<span class="glyphicon glyphicon-erase"></span>
+								Eraser
+							</button>
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="save">
+								<span class="glyphicon glyphicon-pencil"></span>
+								Save
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="load">
+								<span class="glyphicon glyphicon-erase"></span>
+								Load
+							</button>
+						</div>
 					</div>
 				</div>
-				<div class="col-xs-6">
-					<div class="btn-group btn-group-justified">
-						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="mark">
-							<span class="glyphicon glyphicon-pencil"></span>
-							highlight Mark
-						</button>
-						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="eraser">
-							<span class="glyphicon glyphicon-erase"></span>
-							highlight eraser
-						</button>
+				<div class="row col-xs-6">
+					<h1 class="text-center">highlighter 2</h1>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="start2">
+								<span class="glyphicon glyphicon-play"></span>
+								Start
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="end2">
+								<span class="glyphicon glyphicon-stop"></span>
+								Stop
+							</button>
+						</div>
 					</div>
-				</div>
-				<div class="col-xs-6">
-					<div class="btn-group btn-group-justified">
-						<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="save">
-							<span class="glyphicon glyphicon-pencil"></span>
-							Save
-						</button>
-						<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="load">
-							<span class="glyphicon glyphicon-erase"></span>
-							Load
-						</button>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="mark2">
+								<span class="glyphicon glyphicon-pencil"></span>
+								Marker
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="eraser2">
+								<span class="glyphicon glyphicon-erase"></span>
+								Eraser
+							</button>
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="save2">
+								<span class="glyphicon glyphicon-pencil"></span>
+								Save
+							</button>
+							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="load2">
+								<span class="glyphicon glyphicon-erase"></span>
+								Load
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="container" id="text1">
+			<div class="textcontainer" id="text1">
 				<h1>Lorem ipsum dolor sit amet, consectetur </h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
