fix save load problem + active canvas wasn't fixed yet

--- a/demo/index.html
+++ b/demo/index.html
@@ -48,6 +48,14 @@
 							</button>
 						</div>
 					</div>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="clear">
+								<span class="glyphicon glyphicon-pencil"></span>
+								clear
+							</button>
+						</div>
+					</div>
 				</div>
 				<div class="row col-xs-6">
 					<h1 class="text-center">highlighter 2</h1>
@@ -84,6 +92,14 @@
 							<button class="col-xs-2 col-xs-offset-2 btn btn-danger" id="load2">
 								<span class="glyphicon glyphicon-erase"></span>
 								Load
+							</button>
+						</div>
+					</div>
+					<div class="col-xs-6">
+						<div class="btn-group btn-group-justified">
+							<button class="col-xs-2 col-xs-offset-1 btn btn-primary" id="clear2">
+								<span class="glyphicon glyphicon-pencil"></span>
+								clear
 							</button>
 						</div>
 					</div>
